Refactor code for service params
