# config/swagger.yml
@@ -192,16 +192,6 @@ paths:
           description: Global ID of the service to update
           type: string
           required: True
-        - name: add_site
-          in: query
-          description: add site if `query=true`
-          required: true
-          type: boolean
-        - name: remove_site
-          in: query
-          description: delete site if 'query=true'
-          required: true
-          type: boolean
         - name: service
           in: body
           schema: 
